@@ -1,6 +1,13 @@
 
 No release numbers
 ------------------
+ - Wed May 31 01:17:24 UTC 2000
+   - Added constants for message sizes (MAXMSGLEN, MAXCHATMSGLEN)
+     - Note that the new max message size is defined as 7988bytes,
+         drastically larger than WinAIM lets you put out.  This is a
+         libfaim-exclusive feature :)
+   - Reduced base buffer size on aim_send_im()  
+ 
  - Tue May 30 22:32:31 UTC 2000
    - Added lock around tx seqnum to prevent that race when transmitting
        from diverse threads. (actually committed earlier today)
